bm-us015 fixed spacing

--- a/src/components/invoices/CreateInvoice.css
+++ b/src/components/invoices/CreateInvoice.css
@@ -7,7 +7,7 @@
 .page__grid {
     display: flex;
     flex-direction: row;
-    width: 1200px;
+    width: 1400px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -15,11 +15,11 @@
 .page__grid__left {
     padding-right: 20px;
     padding-top: 70px;
-    width: 20%;
+    width: 300px;
 }
 
 .page__grid__center {
-    width: 80%;
+    width: 1000px;
     padding: 10px;
 }
 
@@ -28,7 +28,7 @@
     border-radius: 5px;
     box-shadow: 5px 5px 15px black;
     padding: 20px;
-    width: 20%;
+    width: 300px;
 
 }
 
@@ -51,6 +51,7 @@ textarea {
     height: 200px;
 }
  
+
 
 .form__input__fieldset {
     display: flex;
